--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teatri-reggio-calendar",
+  "name": "scala-calendario-vendite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^0.20.0",
     "ical-generator": "^0.2.7",
+    "moment": "^2.21.0",
     "superagent": "^1.8.0"
   }
 }
